# rextio-tensorflow

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  experimental-linux-aarch64.yml
ci/: build_cuda_candidate.py  check_sdist_contract.py  cuda-e3-build-only.json  platform-contract.json  requirements-native.txt  requirements-package.txt  requirements-quality.txt
docs/: cuda-build-only-0.1.2.md  implementation-plan-0.1.0.md
scripts/: certify_cuda_candidate.py  verify_cuda_e3_evidence.py
src/rextio_tensorflow/: __about__.py  __init__.py  diagnostics.py  plugin.py  plugin_types.py  types.py
src/rextio_tensorflow/claim/: __init__.py  activations.py  add.py  classification.py  cuda.py  matmul.py  reductions.py  unary.py
src/rextio_tensorflow/lower/: __init__.py  activations.py  add.py  classification.py  cuda.py  matmul.py  reductions.py  unary.py
src/rextio_tensorflow/rules/: __init__.py  coverage.py  records.py
src/rextio_tensorflow/rust_snippets/: __init__.py  cuda_runtime.py  runtime.py
tests/: test_analyzer_surface.py  test_claim.py  test_cuda_e3_build_only.py  test_cuda_e3_evidence.py  test_cuda_e3_manual_harness.py  test_import_minimal.py  test_lower.py  test_package_metadata.py  test_platform_matrix.py  test_platform_profiles.py  test_plugin.py
tests/e2e/: test_alpha_real_cargo.py  test_linux_experimental_probe.py
