[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rextio-tensorflow"
dynamic = ["version"]
description = "Private Alpha PoC Rextio plugin that lowers a tiny TensorFlow 2.21.0 CPU inference slice to native Rust via the wheel TFE C API (plugin API 1.3)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Steve Si-young Song", email = "rextio.co@gmail.com"}
]
keywords = ["rextio", "tensorflow", "rust", "compiler", "plugin", "tfe"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
  "Private :: Do Not Upload",
]
# Private Alpha: no abandoned high-level tensorflow Rust crate. Native code
# dlopens the active Python tensorflow==2.21.0 wheel (TFE C API + private
# EagerTensor bridge). Discovery stays import-minimal (never imports TF).
dependencies = [
  "rextio>=0.1.3,<0.2",
  "tensorflow==2.21.0",
]

[project.urls]
Homepage = "https://github.com/rextio/rextio-tensorflow"
Changelog = "https://github.com/rextio/rextio-tensorflow/blob/main/CHANGELOG.md"

[project.entry-points."rextio.plugins"]
rextio-tensorflow = "rextio_tensorflow.plugin:plugin"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.15",
  "mypy>=1.11",
  "build>=1.2",
  "twine>=5.0",
  "check-wheel-contents>=0.6",
]

[tool.setuptools.dynamic]
version = {attr = "rextio_tensorflow.__about__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
  "needs_cargo: builds and executes a real Rust extension against TF 2.21; serialize these tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "D"]
ignore = ["E501", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
